css/main.css
/* layout *********************************************************************/

html {
	height: 100%;
}

body {
	display: flex;
	flex-direction: column;

	height: 100%;
	width: 95%;
	max-width: 1000px;
	margin: 0 auto;

	font-family: "Helvetica", "Arial", sans-serif;
	line-height: 1.5;

	color: #eee;
	background-color: #222;
}

a {
	text-decoration: none;

	color: hsla(190, 80%, 50%, 1);
}

a:hover {
	text-decoration: underline;
}

h1,
h2,
h3,
strong {
	color: #fff;
}

code,
pre {
	background-color: #333;
}

input {
	font-size: 1rem;
}

main {
	flex: 1 0 auto;
}

/* header *********************************************************************/

header {
	display: flex;
	justify-content: space-between;
	align-items: center;
	margin: 2.5% 0;
}

nav {
	display: flex;
	justify-content: right;
	flex-wrap: wrap;
}

nav > * {
	margin: 0.2rem 0.4rem;

	text-align: right;
}

.logo {
	display: block;
	width: 60px;
	height: 60px;
}

/* footer *********************************************************************/

footer {
	display: flex;
	justify-content: space-between;
	align-items: center;
	flex-wrap: wrap;
	flex-shrink: 0;
	margin: 2.5% 0;
}

footer > * {
	margin: 0.25rem;
}

[rel="license"] img {
	display: block;
	width: 88px;
	height: 31px;
}

